# pmat-test-gpt4.1

./: README.md  pyproject.toml  results.json  test.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
project/: pyfind.py
src/: pfind.py
src/pfind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_pfind.py
